# ReportGenerator

./: .gitignore  Cargo.toml  README.md
src/: main.rs  services.rs
src/db/: connect.rs
src/public/: table.rs
src/services/: allusers_participated.rs  users.rs
